<resources>
    <string name="app_name">JangCo</string>

    <!--login -->
    <string name="id">ID</string>
    <string name="pw">P.W</string>
    <string name="login">로그인</string>
    <string name="autoLogin">자동로그인</string>
    <string name="signUp">회원가입</string>
    <string name="signUpComment">아직 다바다 회원이 아니신가요?</string>
    <string name="loginHelp">도움이 필요하신가요?</string>
    <string name="loginFail">"Email 또는 Pw가 정확하지 않습니다."</string>
    <string name="loginEmptyEmailPw">Email 또는 Pw를 입력하지 않았습니다.</string>
    <!--signUp -->

    <!--signUp basic info -->
    <string name="emailAndPw">Email / Password</string>
    <string name="address">Address</string>
    <string name="newID">이메일을 입력하세요</string>
    <string name="newPW">비밀번호를 입력하세요</string>
    <string name="confirmPW">다시 한번 비밀번호를 입력하세요</string>
    <string name="searchAddress">주 소 검 색</string>

    <string name="idFormatInspection">이메일 형식이 아닙니다.</string>
    <string name="pwConditionInspection">영문, 숫자 조합 8자리 이상으로 설정하세요</string>
    <string name="nullAddressAlert">잘못된 주소입니다 다시 검색해주세요.</string>

    <string name="idEmptyInspection">이메일을 입력하지 않았습니다.</string>
    <string name="pwEmptyInspection">비밀번호를 입력하지 않았습니다.</string>
    <string name="pwConfirmInspection">비밀번호가 일치 하지않습니다.</string>
    <string name="addressEmptyInspection">주소를 찾아서 넣어주세요.</string>

    <!--signUp school grade info -->
    <string name="searchLabel">Search for School</string>
    <string name="searchForSchoolHint"> ex) 국민대학교</string>
    <string name="searchForSchoolHeaderMajor">전 공</string>
    <string name="searchForSchoolHeaderLine">계 열</string>

    <string name="searchForSchoolAttending">재학</string>
    <string name="searchForSchoolAbsence">휴학</string>
    <string name="searchForSchoolGraduated">졸업</string>

    <string name="gradeInfoLabel">Grade Info</string>
    <string name="MajorSpinnerTitle">학과를 선택하세요</string>
    <string name="totalGradeLabel">전체 성적정보</string>
    <string name="lastGradeLabel">지난 학기성적</string>
    <string name="averageHint">평균 학점</string>
    <string name="percentageHint">백 분 위</string>


    <string name="schoolEmptyInspection">학교를 선택하지 않았습니다.</string>
    <string name="majorSelectInspection">전공을 선택하지 않았습니다.</string>
    <string name="statusSelectInspection">학적 상태를 선택 해주세요</string>
    <string name="gradeInspection">0 ~ 4.5 사이의 학점을 입력하세요</string>
    <string name="percentageInspection">백분위를 재대로 입력하세요</string>


    <string name="signUpCompleteDialogTitle">"회원가입을 축하드립니다!"</string>
    <string name="signUpCompleteMessage">
        "더 정확한 맞춤 장학금 서비스를 제공하기위해 반드시  &quot;내정보 &quot;에서 추가정보를 입력해주세요."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--main  -->
    <string name="homeFragmentToolbarLabel">홈</string>
    <string name="scholarshipFragmentToolbarLabel">장학금</string>
    <string name="myScholarshipFragmentToolbarLabel">내 장학금 관리</string>
    <string name="moreInfoFragmentToolbarLabel">더 보기</string>

    <!--moreInfo -->
    <string name="moreInfoFragmentBasicComment">님, 내 정보를 수정해 보세요</string>
    <!--myInfo -->
    <string name="moreInfoFragmentMyInfo">내정보</string>
    <string name="moreInfoFragmentMyInfoNickName">nickName</string>
    <string name="moreInfoFragmentMyInfoProfileLabel">별명과 사진을 변경해 보세요</string>
    <string name="moreInfoFragmentMyInfoProfileEdit">프로필 수정하기</string>
    <string name="moreInfoFragmentMyInfoProfileChange">프로필 수정</string>


    <string name="moreInfoFragmentMyInfoEmail">UserEmail</string>

    <string name="cancelLabel">취소</string>
    <string name="updateLabel">변경</string>


    <!--change PW -->
    <string name="moreInfoFragmentMyInfoPasswordChange">비밀번호 변경</string>
    <string name="moreInfoFragmentMyInfoPasswordChangePreviousPw">기존 비밀번호</string>
    <string name="moreInfoFragmentMyInfoPasswordChangePreviousPwHint">기존 비밀번호를 입력하세요</string>
    <string name="moreInfoFragmentMyInfoPasswordChangeNewPw">새 비밀번호</string>
    <string name="moreInfoFragmentMyInfoPasswordChangeNewPwConfirm">새로운 비밀번호를 입력하세요</string>


    <string name="moreInfoFragmentMyInfoAddressChange">주소 변경</string>


    <string name="moreInfoFragmentMyInfoSchoolChange">학교정보 변경</string>
    <string name="moreInfoFragmentMyInfoGradeChange">성적정보 변경</string>
    <string name="moreInfoFragmentMyInfoIncomeChange">소득분위 입력</string>
    <string name="moreInfoFragmentMyInfoSqualificationChange">특수정보 입력</string>

    <!--change income -->
    <string name="changeIncomeActivityBasicTierLabel">기초생활수급자 (기준 중위소득 30%이하)</string>
    <string name="changeIncomeActivitySecondTierLabel">차상위계층 (기준 중위소득 50%이하)</string>
    <string name="changeIncomeActivityETCLabel">기타 (기준 중위소득 50%초과)</string>
    <string name="familyNumberHint">가구수</string>
    <string name="familyMonthIncomeHint">월수입 (단위: 만)</string>
    <string name="medianIncomePercentage">예상 중위 소득 분위:</string>


    <!--change special qualification -->
    <string name="changeSQualificationActivityOfficialLabel">공무원 본인 또는 자녀</string>
    <string name="changeSQualificationActivityNationalMeritLabel">국가유공자 및 배우자</string>
    <string name="changeSQualificationActivityIndustrialAccidentLabel">산재근로자 본인, 배우자 또는 자녀</string>
    <string name="changeSQualificationActivityActiveSoldierLabel">현역군인 및 군무원의 자녀</string>
    <string name="changeSQualificationActivityLongTermSoldierLabel">장기복무군인 본인 또는 자녀</string>
    <string name="changeSQualificationActivityPrivateSchoolLabel">사립학교교직원 본인 또는 자녀</string>
    <string name="changeSQualificationActivityEmploymentInsuranceLabel">고용보험 피보험자</string>
    <string name="changeSQualificationActivityStudentHeadLabel">학생가장(보육원출신, 조손가정포함)</string>
    <string name="changeSQualificationActivitySingleParentFamilyLabel">한부모가정</string>
    <string name="changeSQualificationActivityDisabledLabel">장애인/장애우</string>
    <string name="changeSQualificationActivityMulticulturalFamilyLabel">다문화가정</string>
    <string name="changeSQualificationActivityAgricultureForestryFisheriesLabel">농림수산업인 본인 또는 자녀</string>
    <string name="changeSQualificationActivityNorthKoreaDefectorLabel">북한이탈주민자녀</string>
    <string name="changeSQualificationActivityHighwayAccidentLabel">고속도로 사고 관련자</string>
    <string name="changeSQualificationActivitySmallBusinessLabel">중소기업 근로자의 자녀</string>

    >>>>>>> 3b7769b2415978eab83d02c9a8ef748bce8c94e1

    <string name="moreInfoFragmentScholarshipRecord">장학이력</string>
    <string name="moreInfoFragmentMyScholarship">찜</string>
    <string name="moreInfoFragmentPoint">포인트</string>

    <string name="moreInfoFragmentNotice">공지사항</string>
    <string name="moreInfoFragmentNoticeMustReadRate">중요</string>
    <string name="moreInfoFragmentNoticeBasicRate">일반</string>

    <string name="moreInfoFragmentEvent">이벤트</string>
    <string name="moreInfoFragmentEventTerm"> ~ </string>
    <string name="moreInfoFragmentEventEndMessage">종료된 이벤트입니다</string>


    <string name="moreInfoFragmentGuide">장학금 가이드</string>
    <string name="moreInfoFragmentGuideClose">그 만 보 기</string>

    <string name="moreInfoFragmentPersonalQuestion">1:1 문의사항</string>
    <string name="adminEmail">hik10417@gmail.com</string>
    <string name="emailSubject">1:1 문의 요청드립니다</string>
    <string name="emailAlter">이메일 앱이 설치되어 있지 않습니다.</string>

    <string name="moreInfoFragmentPreferences">환경설정</string>
    <string name="moreInfoFragmentShareApp">친구에게 App 공유하기</string>
    <string name="moreInfoFragmentDaBaDa">DaBaDa</string>
</resources>
