<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".ChangePwActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/changePwActivityToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:minHeight="?attr/actionBarSize"
        android:elevation="2dp"
        android:theme="?attr/actionBarTheme" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            style="@style/signUpLabelTextVIew"
            android:text="@string/moreInfoFragmentMyInfoPasswordChangePreviousPw"
            android:layout_marginTop="12dp"/>
        <EditText
            android:id="@+id/changePwActivityPreviousPwEditText"
            style="@style/signUPBigEditText"
            android:layout_marginTop="12dp"
            android:layout_height="40dp"
            android:hint="@string/moreInfoFragmentMyInfoPasswordChangePreviousPwHint"
            android:inputType="textPassword"/>

        <TextView
            style="@style/signUpLabelTextVIew"
            android:text="@string/moreInfoFragmentMyInfoPasswordChangeNewPw"
            android:layout_marginTop="36dp"/>
        <EditText
            android:id="@+id/changePwActivityNewPwEditText"
            style="@style/signUPBigEditText"
            android:layout_marginTop="12dp"
            android:layout_height="40dp"
            android:hint="@string/moreInfoFragmentMyInfoPasswordChangeNewPwConfirm"
            android:inputType="textPassword"/>
        <EditText
            android:id="@+id/changePwActivityNewPwConfirmEditText"
            style="@style/signUPBigEditText"
            android:layout_marginTop="12dp"
            android:layout_height="40dp"
            android:hint="@string/confirmPW"
            android:inputType="textPassword"/>
        <TextView
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="6dp"
            android:textSize="12sp"
            android:text="@string/pwConditionInspection"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/changePwActivityCancelButton"
            style="@style/moreInfoFragmentSmallButton"
            android:background="@drawable/rectangle_lightgray_color"
            android:text="@string/cancelLabel" />
        <Button
            android:id="@+id/changePwActivityUpdateButton"
            style="@style/moreInfoFragmentSmallButton"
            android:background="@drawable/rectangle_basic_color"
            android:text="@string/updateLabel"/>
    </LinearLayout>


</LinearLayout>