<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".ChangeGradeActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/changeGradeActivityToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:minHeight="?attr/actionBarSize"
        android:elevation="2dp"
        android:theme="?attr/actionBarTheme" />
    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:orientation="vertical">
        <TextView
            style="@style/signUpLabelTextVIew"
            android:text="@string/totalGradeLabel"/>
        <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/changeGradeActivityTotalAverage"
                style="@style/gradeEditText"
                android:drawableLeft="@mipmap/ic_average"
                android:hint="@string/averageHint"/>
            <EditText
                android:id="@+id/changeGradeActivityTotalPercentage"
                style="@style/gradeEditText"
                android:drawableLeft="@mipmap/ic_percentage"
                android:hint="@string/percentageHint"/>
        </LinearLayout>

        <TextView
            android:layout_marginTop="16dp"
            style="@style/signUpLabelTextVIew"
            android:text="@string/lastGradeLabel"/>
        <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/changeGradeActivityLastAverage"
                style="@style/gradeEditText"
                android:drawableLeft="@mipmap/ic_average"
                android:hint="@string/averageHint" />
            <EditText
                android:id="@+id/changeGradeActivityLastPercentage"
                style="@style/gradeEditText"
                android:drawableLeft="@mipmap/ic_percentage"
                android:hint="@string/percentageHint"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:orientation="horizontal">
        <Button
            android:id="@+id/changeGradeActivityCancelButton"
            style="@style/moreInfoFragmentSmallButton"
            android:background="@drawable/rectangle_lightgray_color"
            android:text="@string/cancelLabel" />
        <Button
            android:id="@+id/changeGradeActivityUpdateButton"
            style="@style/moreInfoFragmentSmallButton"
            android:background="@drawable/rectangle_basic_color"
            android:text="@string/updateLabel"/>
    </LinearLayout>
</LinearLayout>