<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    tools:context=".MyInfoActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/myInfoActivityToolbar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorWhite"
        android:minHeight="?attr/actionBarSize"
        android:elevation="2dp"
        android:theme="?attr/actionBarTheme"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_bottom_out_line_1dp"
        android:orientation="horizontal"
        android:padding="16dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/ic_launcher_round"
            app:civ_border_width="1dp"
            app:civ_border_color="@color/colorGray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="16dp"
            android:padding="6dp">
            <TextView
                android:id="@+id/myInfoActivityNickNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:text="@string/moreInfoFragmentMyInfoNickName"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:textSize="12sp"
                android:text="@string/moreInfoFragmentMyInfoProfileLabel"/>
            <Button
                android:id="@+id/myInfoActivityProfileChangeButton"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:padding="4dp"
                android:drawableLeft="@drawable/ic_edit_white_24dp"
                android:background="@drawable/round_accent_color"
                android:textSize="12sp"
                android:text="@string/moreInfoFragmentMyInfoProfileEdit"
                android:textColor="@color/colorWhite"
                />
        </LinearLayout>
    </LinearLayout>


    <TextView
        style="@style/moreInfoFragmentListMenuText"
        android:drawableLeft="@drawable/ic_user_email_24dp"
        android:text="@string/moreInfoFragmentMyInfoEmail"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/rectangle_bottom_out_line_gray_1dp">
        <TextView
            style="@style/moreInfoFragmentListMenuText"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:drawableLeft="@drawable/ic_user_password_24dp"
            android:text="@string/moreInfoFragmentMyInfoPasswordChange"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="8dp"
            android:src="@drawable/ic_right_arrow"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/rectangle_bottom_out_line_gray_1dp">
        <TextView
            style="@style/moreInfoFragmentListMenuText"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:drawableLeft="@drawable/ic_user_home_24dp"
            android:text="@string/moreInfoFragmentMyInfoAddressChange"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="8dp"
            android:src="@drawable/ic_right_arrow"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/rectangle_bottom_out_line_gray_1dp">
        <TextView
            style="@style/moreInfoFragmentListMenuText"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:drawableLeft="@drawable/ic_user_school_24dp"
            android:text="@string/moreInfoFragmentMyInfoSchoolChange"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="8dp"
            android:src="@drawable/ic_right_arrow"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/rectangle_bottom_out_line_gray_1dp">
        <TextView
            style="@style/moreInfoFragmentListMenuText"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:drawableLeft="@drawable/ic_user_grade_24dp"
            android:text="@string/moreInfoFragmentMyInfoGradeChange"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="8dp"
            android:src="@drawable/ic_right_arrow"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/rectangle_bottom_out_line_gray_1dp">
        <TextView
            style="@style/moreInfoFragmentListMenuText"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:drawableLeft="@drawable/ic_user_income_24dp"
            android:text="@string/moreInfoFragmentMyInfoIncomeChange"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="8dp"
            android:src="@drawable/ic_right_arrow"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/rectangle_bottom_out_line_gray_1dp">
        <TextView
            style="@style/moreInfoFragmentListMenuText"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:drawableLeft="@drawable/ic_user_squalification_24dp"
            android:text="@string/moreInfoFragmentMyInfoSqualificationChange"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="8dp"
            android:src="@drawable/ic_right_arrow"/>
    </LinearLayout>





</LinearLayout>